teslamate/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  labels:
    app.kubernetes.io/name: teslamate
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: teslamate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: teslamate
    spec:
      containers:
        - name: teslamate
          image: docker.io/teslamate/teslamate:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          ports:
            - name: http
              containerPort: 4000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
          readinessProbe:
            tcpSocket:
              port: http
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              cpu: 500m
              memory: 256Mi
